<resources>
    <string name="app_name">Mineswiper</string>
    <string name="main">MAIN</string>
    <string name="help">HELP</string>
    <string name="start_game">START GAME</string>
    <string name="exit">EXIT</string>
    <string name="imgDescription">Image to layout</string>
    <string name="textWelcome">Welcome to the game of Mineswiper</string>
    <string name="descriptionGame">El juego consiste en despejar todas las casillas de una pantalla que no oculten una mina. Algunas casillas tienen un número, el cual indica la cantidad de minas que hay en las casillas circundantes. Así, si una casilla tiene el número 3, significa que de las ocho casillas que hay alrededor (si no es en una esquina o borde) hay 3 con minas y 5 sin minas. Si se descubre una casilla sin número indica que ninguna de las casillas vecinas tiene mina y éstas se descubren automáticamente. Si se descubre una casilla con una mina se pierde la partida.</string>
    <string name="atras">GO BACK</string>
    <string name="setting">SETTING</string>
    <string name="playerText">Player</string>
    <string name="textSizeGrill">Size of grill</string>
    <string name="txtTimeControl">Time control</string>
    <string name="porcentajeMinas">% Mines</string>
    <string name="fifteenp">15%</string>
    <string name="twentyfivep">25%</string>
    <string name="thirtyfivep">35%</string>
    <string name="msg1">It\'s necessary a name of player</string>
    <string name="game">GAME</string>
    <string name="timeOfGame">000</string>
    <string name="sendEmail">Send by email</string>
    <string name="newGame">New Game</string>
</resources>
