<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.santi.mineswiper.SettingActivity">
    <LinearLayout
        android:id="@+id/LinearLayoutActSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgAjustes"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/imgajustes"
            android:contentDescription="@string/imgDescription"/>
        <TextView
            android:layout_toRightOf="@id/imgAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="50sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting"
        android:layout_marginTop="15dp"
        android:id="@+id/LinearLayoutActSetting1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerText"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting1"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayoutActSetting2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/user"
            android:contentDescription="@string/imgDescription"/>
        <EditText
            android:id="@+id/userName"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playerText"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting2"
        android:layout_marginTop="5dp"
        android:id="@+id/LinearLayoutActSetting3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSizeGrill"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting3"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayoutActSetting4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/cuadricula"
            android:contentDescription="@string/imgDescription"/>
        <EditText
            android:id="@+id/sizeGrill"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textSizeGrill"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting4"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayoutActSetting5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTimeControl"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting5"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayoutActSetting6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/timechange"
            android:contentDescription="@string/imgDescription"/>
        <CheckBox
            android:id="@+id/checkControl"
            android:layout_marginLeft="25dp"
            android:layout_width="35dp"
            android:layout_height="35dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting6"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayoutActSetting7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcentajeMinas"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearLayoutActSetting7"
        android:id="@+id/LinearLayoutActSetting8"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/bomb"
                android:contentDescription="@string/imgDescription"/>
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/fifteenp"/>
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/twentyfivep"/>
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/thirtyfivep"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:onClick="goGame"/>
</RelativeLayout>
